add entity links
