# src/main/java/com/jumkid/activity/service/mapper/ActivityEntityLinkMapper.java
@@ -1,7 +1,7 @@
 package com.jumkid.activity.service.mapper;
 
-import com.jumkid.activity.controller.dto.ActivityAssignee;
-import com.jumkid.activity.model.ActivityAssigneeEntity;
+import com.jumkid.activity.controller.dto.ActivityEntityLink;
+import com.jumkid.activity.model.ActivityEntityLinkEntity;
 import org.mapstruct.Context;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
@@ -10,12 +10,11 @@ import org.mapstruct.NullValuePropertyMappingStrategy;
 @Mapper(componentModel = "spring",
         uses = {ActivityMapper.class},
         nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
-public interface ActivityAssigneeMapper {
+public interface ActivityEntityLinkMapper {
 
     @Mapping(target="activityId", source="entity.activityEntity.activityId")
-    ActivityAssignee entityToDTO(ActivityAssigneeEntity entity);
+    ActivityEntityLink entityToDto(ActivityEntityLinkEntity entity);
 
     @Mapping(target = "activityEntity", ignore = true)
-    ActivityAssigneeEntity dtoToEntity(ActivityAssignee dto, @Context MapperContext ctx);
-
+    ActivityEntityLinkEntity dtoToEntity(ActivityEntityLink dto, @Context MapperContext ctx);
 }
